--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "dotenv": "^17.2.1"
   },
   "scripts": {
-    "start": "echo 'This is the root package.json. Please run the backend from travel-diaries-backend directory.'"
+    "start": "cd travel-diaries-backend && npm start"
   }
 }
