--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "dotenv": "^17.2.1"
   },
   "scripts": {
-    "start": "cd travel-diaries-backend && npm start"
+    "start": "cd backend && node env-setup.js"
   }
 }
