--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Backend server for Travel Diaries application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node env-setup.js",
+    "dev": "nodemon env-setup.js"
   },
   "dependencies": {
     "express": "^4.18.2",
